[gd_scene load_steps=4 format=2]

[ext_resource path="res://AttackLine.gd" type="Script" id=1]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 0, 0 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.972727 ), 0.0, 0.0, 0, 0 ]

[node name="AttackLine" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 0.972549, 0.729412, 0.776471, 0.25098 )
width = 20.0
width_curve = SubResource( 2 )
default_color = Color( 1, 1, 1, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Tween" type="Tween" parent="."]

[node name="Timer2" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
